--- a/app/views/catarse_bootstrap/pages/hello.html.slim
+++ b/app/views/catarse_bootstrap/pages/hello.html.slim
@@ -112,6 +112,7 @@
         a.btn.btn-large.btn-inline href="#{start_path(ref: 'ctrse_hello')}" = t('.cta.maker-link')
 .bg-people.before-footer
   .w-container
+    .fontsize-large.u-text-center = t('.staff')
 
 .w-lightbox-backdrop.w-hidden tabindex="0"
   .w-lightbox-container
